--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,2 @@
-ARG PY_VERSION="3.10"
-FROM python:${PY_VERSION}
+FROM mcr.microsoft.com/devcontainers/python
 
-RUN pip install --upgrade pip
-RUN pip --no-cache-dir install -r requirements.txt
